--- a/expandCollapse.html
+++ b/expandCollapse.html
@@ -10,11 +10,11 @@
 		display: inline-block;
 	}
 	.icon-img.icon-open {
-		background: no-repeat url(arrow-down-icon.png);
+		background: no-repeat url(images/arrow-down-icon.png);
 		background-size: 100%;
 	}
 	.icon-img.icon-close {
-		background: no-repeat url(arrow-up-icon.png);
+		background: no-repeat url(images/arrow-up-icon.png);
 		background-size: 100%;
 	}
   </style>
